--- a/01/이영훈/1장.md
+++ b/01/이영훈/1장.md
@@ -1,1 +1,32 @@
-# 객체 설계
+# 객체, 설계
+
+> 우리는 오늘 완성해야 하는 기능을 구현하는 코드를 짜야 하는 동시에   
+>내일 쉽게 변경할 수 있는 코드를 짜야 한다.
+
+* 의존성 여부  
+  의존성이 존재한다면 어떤 객체가 변경될 때 그 객체에게 의존하는 다른 객체도 함께 변경될 수 있다.
+
+
+* 결합도  
+  객체 사이의 의존성이 과한 경우 "결합도가 높다" 라고 한다.
+
+* 캡슐화와 응집도  
+  객체 내부의 상태를 캡슐화 하고 객체 간에 오직 메시지를 통해서만 상호작용하도록 만들어야 한다.  
+  자신에게 밀접하게 연관된 작업만을 수행하고 연관성 없는 작업은 다른 객체에게 위임하는 객체를 "응집도가 높다" 라고 한다.
+* 절차지향과 객체지향  
+  행위를 수행하는 것을 **프로세스(Process)**, 정보를 가지고만 있는 것을 **데이터(Data)** 라고 한다.
+  - 절차지향  
+    프로세스와 데이터가 **별도의 모듈에** 존재하도록 프로그래밍 하는 방법
+  - 객체지향  
+    프로세스와 데이터가 **동일한 모듈에** 존재하도록 프로그래밍 하는 방법
+* 책임  
+  객체지향에서 기능을 가리키는 용어를 '책임'이라 한다.  
+  절차지향에서 한 모듈에 몰려있던 책임을 객체지향에서는 개별 객체가 지게 한다. 이를 **책임의 이동** 이라 한다.  
+<br>
+
+설계를 어렵게 만드는 것은 **의존성**이다. 불필요한 의존성을 제거함으로써 객체 사이의 **결합도**를 낮출 수 있다. 이를 위해 다른 객체가 몰라도 되는 사항을 **캡슐화**하고, 각 객체의 **자율성**을 높이고 **응집도**높은 객체들을 만들어야 한다.
+<br><br>
+
+---
+우리가 진정으로 원하는 것은 변경에 유연하게 대응할 수 있는 코드다.  
+변경 가능한 코드란 **이해하기 쉬운 코드**다.
