--- a/02/최원준/2장.md
+++ b/02/최원준/2장.md
@@ -1,1 +1,179 @@
-# 객체 설계
+# 객체지향 프로그래밍
+
+## 영화 예매 시스템
+
+### 요구사항 살펴보기
+
+- 사용자는 영화 예매 시스템을 이용하여 쉽고 빠르게 보고 싶은 영화를 예매 할 수 있다.
+- 도메인 정리
+  - 영화
+    - 영화에 대한 기본정보들을 가진다.
+    - 제목, 상영시간, 가격 정보 등
+  - 상영
+    - 관객들이 영화를 관람하는 사건을 표현
+    - 상영 일자, 시간, 순번
+  - 할인 조건
+    - 순서 조건
+    - 기간 조건
+  - 할인 정책
+    - 가격을 결정
+- 사람들이 실제로 예매하는 대상은 영화가 아니라 상영이다.
+
+## 객체지향 프로그래밍을 향해
+
+- 클래스와 속성, 메소드에 구속되지 마라.
+- 다음 두가지에 집중한다.
+  1. 어떤 클래스가 필요한지가 아닌 어떤 객체들이 필요한지 고민하라
+     - 어떤 상태와 행동들을 해야하는지 결정해야 한다.
+  2. 객체를 독립적인 존재가 아니라 기능을 구현하기 위해 협력하는 공동체의 일원으로 봐야한다.
+     - 객체는 다른 객체에 도움을 주거나 의존하면서 살아가는 협력적인 존재다.
+     - 설계를 유연하고 확장가능하게 협력에 중점을 두자
+
+### 도메인의 구조를 따르는 프로그램 구조
+
+> 문제를 해결하기 위해 사용자가 프로그램을 사용하는 분야를 **도메인**이라고 부른다.
+
+- 도메인의 개념과 관계를 반영하도록 프로그램을 구조화 하여야 한다.
+- 클래스의 구조는 도메인의 구조와 유사한 형태를 띠어야 한다.
+
+### 클래스 구현하기
+
+- 도메인 개념들의 구조를 반영하는 적절한 클래스 구조를 만들었다면 남은 것은 구현이다.
+- 구현의 핵심은 경계를 구분하는 것이다.
+- **다른 객체의 시점**으로 바라봤을 때 **알아야 할 것**과 **몰라도 될 것**을 구분 하여야한다.
+  - private와 public의 차이
+- 클래스의 내부와 외부를 구분해야 하는 이유
+  - 경계의 명확성이 객체의 자율성과 책임을 보장
+  - 프로그래머에게 구현의 자유를 제공
+
+#### 자율적인 객체
+
+- 객체는 상태와 행동을 함께 가지는 복합적인 존재이다.
+- 객체는 스스로 판단하고 행동하는 자율적인 존재이다.
+- 대부분의 객체지향 프로그래밍 언어는 접근 제어와 접근수정자를 함께 제공한다.
+- 캡슐화와 접근 제어는 객체를 두 부분으로 나눈다.
+  1. 퍼블릭 인터페이스
+     - 외부에서만 접근 가능한 부분
+  2. 구현
+     - 내부에서만 접근 가능한 부분이다.
+- 인터페이스와 구현의 분리 원칙
+- 객체의 상태를 숨기고 행동만을 외부에 공개해야 한다.
+
+#### 프로그래머의 자유
+
+- 클래스 작성자와 클라이언트 프로그래머로 구분하는 것이 유용하다.
+- 클라이언트 프로그래머
+  - 클래스 작성자가 추가한 데이터 타입들을 사용한다.
+  - 필요한 클래스들을 엮어서 애플리케이션을 빠르고 안정적으로 구축한다.
+- 클래스 작성자
+  - 새로운 데이터 타입을 프로그램에 추가한다.
+  - 클라이언트 프로그래머가 숨겨 놓은 부분에 접근할 수 없도록 방지. 이를 **은닉**이라고 부른다.
+- public으로 공개되어 있는 영역을 변경하지 않는다면 코드를 자유자재로 수정할 수 있다.
+
+### 협력하는 객체들의 공동체
+
+- 객체지향의 장점은 객체를 이용해 도메인의 의미를 풍부하게 표현할 수 있다는 것이다.
+- 비록 하나의 인스턴스 변수만 포함하더라도 개념을 명시적으로 표현하는 것은 전체적인 설계의 명확성과 유연성을 높이는 첫걸음이다.
+- 시스템의 어떤 기능을 구현하기 위해 객체들 사이에이뤄지는 상호작용을 협력이라고 부른다.
+
+### 협력에 관한 짧은 이야기
+
+- 객체는 요청과 응답으로 이루어진다.
+- 상호작용하는 유일한 방법은 **메세지를 전송**하고 **메세지를 수신**하는 것 뿐이다.
+- 메시지와 메서드를 구분하면 **다형성**의 개념이 시작된다.
+
+## 할인 요금 구하기
+
+### 할인 요금 계산을 위한 협력 시작하기
+
+- 어떤 할인 정책을 사용할 것인지 결정하는 코드가 존재하지 않아도 된다.
+  - 금액 할인 정책
+  - 비율 할인 정책
+- 코드에서 판단하지 않고 단순히 policy라는 객체에 메세지를 전송한다.
+- 상속과 다형성, 추상화의 원리이다.
+
+### 할인 정책과 할인 조건
+
+- 할인 정책은 금액 할인 정책과 비율 할인 정책으로 구분된다.
+- 코드가 유사하지만 할인 요금을 계산하는 방식만 다르다.
+- 실제 어플리케이션에서 할인정책의 인스턴스를 생성할 필요가 없어 추상 클래스를 이용 한다.
+- 부모 클래스에 기본적인 알고리즘의 흐름을 구현하고 처리는 자식 클래스에 위임하는 디자인 패턴을 **템플릿 메서드 패턴**이라고 부른다.
+
+### 할인 정책 구성하기
+
+- 하나의 영화에 단 하나의 할인 정책만 설정할 수 있지만 할인 조건의 경우는 여러개를 적용할 수 있다.
+- 생성자의 파라미터 목록을 이용해 필요한 정보를 전달하도록 강제한다.
+
+## 상속과 다형성
+
+### 컴파일 시간 의존성과 실행 시간 의존성
+
+- 코드의 의존성과 실행 시점의 의존성이 서로 다를 수 있다.
+- 클래스 사이의 의존성과 객체 사이의 의존성은 동일하지 않을 수 있다.
+- 이 차이는 코드를 이해하기 어렵게 만들지만 코드를 유연하고 확장가능하게 만든다. -> 일종의 트레이드 오프
+
+### 차이에 의한 프로그래밍
+
+- 클래스의 코드를 수정하지 않고 재사용하기 위하여 상속을 이용한다.
+- 부모 클래스와 구현을 공유하면서도 행동이 다른 자식 클래스를 추가할 수 있다.
+- 이를 차이에 의한 프로그래밍이라고 부른다.
+
+### 상속과 인터페이스
+
+- 상속이 가치 있는 이유는 부모 클래스가 제공하는 모든 인터페이스를 자식 클래스가 물려받을 수 있다.
+- 부모 클래스가 수신하는 모든 메시지를 수신할 수 있기 때문에 외부 객체는 부모와 자식을 동일한 타입으로 간주한다.
+- 자식 클래스가 부모 클래스를 대신하는 것을 업캐스팅이라고 부른다.
+
+### 다형성
+
+- 메시지와 메서드는 다른 개념이다.
+- 어떤 메서드가 실행될 것인지는 메세지를 수신하는 객체의 클래스에 따라 나뉘어진다.
+- 객체지향 프로그램의 컴파일 시간 의존성과 실행 시간 의존성이 다를 수 있다.
+- 동일한 메시지를 수신했을 때 객체의 타입에 따라 다르게 응답할 수 있다.
+- 메시지에 응답하기 위해 실행될 메서드를 컴파일 시점이 아닌 실행 시점에 결정한다.
+  - 지연 바인딩과 동적 바인딩으로 나누어 부른다.
+- 상속만이 다형성을 구현하는 유일한 방법이 아니며 추상적인 개념이며 구현할 수 있는 방법들은 다양하다.
+
+## 추상화와 유연성
+
+- 할인 정책은 금액 할인 정책과 비율 할인 정책을 포괄하는 추상적인 개념이다.
+- 할인 조건 또한 순번 조건과 기간 조건을 포괄하는 추상적인 개념이다.
+- 추상화는 다음의 장점을 가진다.
+  - 요구사항의 정책을 높은 수준에서 서술할 수 있다.
+  - 설계를 좀 더 유연하게 만들 수 있다.
+- **디자인 패턴**이나 **프레임워크** 모두 추상화를 이용해 상위 정책을 정의하는 객체지향의 메커니즘을 활용한다.
+
+### 유연한 설계
+
+- 할인정책이 없다면 어떻게 할 것인가?
+  - 예외처리를 하는 것은 책임의 위치를 결정하게 되며 협력의 설계 측면에서 좋지 않은 선택이다.
+  - 항상 예외 케이스를 최소화하고 일관성을 유지할 수 있는 방법을 선택해야한다.
+  - 할인요금이 존재하지 않는 할인정책을 사용함으로써 기존의 협력방식을 유지한다.
+
+### 추상 클래스와 인터페이스 트레이드오프
+
+- 구현과 관련된 모든 것들이 트레이드오프의 대상이다.
+- 모든 코드에는 합당한 이유가 있어야 하며 장단점을 구분하고 분석하여 수정 및 작성되어야 한다.
+
+### 코드 재사용
+
+- 상속보다는 합성이 더 좋은 방법이다.
+
+### 상속
+
+- 객체지향에서 코드를 재사용하기 위해 널리 사용되는 기법이다.
+- 상속은 다음과 같은 두가지 문제를 갖고 있다.
+  - 상속은 캡슐화를 위반한다.
+    - 상속을 이용하기 위해서는 부모 클래스의 내부구조에 대하여 잘 알고 있어야 한다.
+  - 설계를 유연하지 못하게 만든다.
+    - 자식 클래스가 부모 클래스에게 강하게 결합되기 때문에 부모 클래스의 변화에 모든 자식 클래스들이 영향을 받는다.
+
+### 합성
+
+- 인터페이스에 정의된 메시지를 통해서만 코드를 재사용하는 방법을 합성이라고 부른다.
+- 상속의 두가지 문제점을 해결한다.
+- 하지만 합성을 지향하되 상속과 합성을 상황에 맞게 조합해서 사용하여야 한다.
+  - 합성은 다형성을 지원하지 않기 때문
+
+
+
