--- a/04/노상문/4장.md
+++ b/04/노상문/4장.md
@@ -1,4 +1,4 @@
-# 설계 품질과 트레이드 오프
+# 🍎 설계 품질과 트레이드 오프
 
 - 객체지향 설계의 핵심은 역할, 책임, 협력이다.
 - 협력은 어플리케이션의 기능을 구현하기 위해 메시지를 주고 받는 객체들 사이의 상호작용.
@@ -24,7 +24,7 @@
   책임은 객체의 상태에서 행동으로, 나아가 객체와 객체 사이의 상호작용르ㅗ 설계 중심을 이동시키고, 결합도가 낮고 응집도가 높으며 구현을 효과적으로 캡슐화하는 객체들을 창조할 수 있는 기반을 제공한다.<br><br>
 - 가끔식은 좋은 설계보다는 나쁜 설계를 보는 과정에서 배우는 것도 있다.
 
-### 데이터 중심의 영화 예매 시스템
+### :leaves: 데이터 중심의 영화 예매 시스템
  - 객체 지향 설계에서는 두 가지 방법을 이용해 시스템을 객체로 분할할 수 있다.<Br>
 첫번째 방법은 상태를 분할의 중심축으로 삼는 방법이고, 두번째 방법은 책임을 분할의 중심축으로 삼는 방법이다.<Br><br>
    일반적으로 객체의 상태는 객체가 저장해야 하는 데이터의 집합을 의미하기 떄문에 여기서는 '상태'와 '데이터'를 동일한 의미로 사용하겠다.<br><br>
@@ -34,7 +34,7 @@
 데이터 중심의 관점은 객체의 상태에 초점을 맞추고 책임 중심의 관점은 객체의 행동에 초점을 맞춘다.<br>
 전자는 객체를 독립된 데이터 덩어리로 바로보고 후자는 객체를 협력하는 공동체의 일원으로 바라본다.<br><br>
 
-- 시스템을 분할하기 위해 데이터와 책임 중 어떤 것을 선택해야 할까?<br>
+- 시스템을 분할하기 위해 데이터와 책임 중 어떤 것을 선택해야 할까?<br> ⏰
 결론부터 말하자면 훌륭한 객체지향 설계는 데이터가 아니라 책임에 초점을 맞추어야 한다.<br><br>
 이유는 변경과 관련이 있다.<br><br>
 객체의 상태는 구현에 속한다.<bR>
@@ -65,7 +65,7 @@
   
 - 지금까지 설명한 내용에서 알 수 있는 것처럼 객체지향에서 가장 중요한 원리는 <b style="color:orange">캡슐화</b>다.<br>
 캡슐화는 외부에서 알 필요가 없는 부분을 감춤으로써 대상을 단순화하는 추상화의 한 종류다.<br>
-객체지향 설계의 가장 중요한 원리는 불안정한 구현 세부사항을 안정적인 인터페이스 뒤로 캡슐화 하는 것이다.<br><br>
+객체지향 설계의 가장 중요한 원리는 불안정한 구현 세부사항을 안정적인 인터페이스 뒤로 캡슐화 하는 것이다.<br><br> 🐡
 
 - 복잡성을 다루기 위한 가장 효과적인 도구는 추상화다.<Br>
 다양한 추상화 유형을 사용할 수 있지만 객체지향 프로그래밍에서 복잡성을 취급하는 주요한 추상화 방법은 캡슐화다.<br>
@@ -122,7 +122,7 @@
 - 캡슐화를 지키면 모듈 안의 응집도는 높아지고 모듈 사이의 결합도는 낮아진다.<br>
 - 캡슐화를 위반하면 모듈 안의 응집도는 낮아지고 모듈 사이의 결합도는 높아진다. <Br>
 - 따라서 응집도와 결합도를 고려하기 전에 먼저 캡슐화를 향상 시키기 위해 노력해야한다.
-- 데이터 중심의 설계는 캡슐화를 위반하기 쉽기 때문에 책임 중심의 설계에 비해 응집도가 낮고 결합도가 높은 객체들을 만들 수 있다.
+- 데이터 중심의 설계는 캡슐화를 위반하기 쉽기 때문에 책임 중심의 설계에 비해 응집도가 낮고 결합도가 높은 객체들을 만들 수 있다. ◀️
 
 - 캡슐화 위반, 높은 결합도, 낮은 응집도가 데이터 중심의 설계가 가진 대표적인 문제점이다.<br><br>
 
@@ -190,7 +190,7 @@
 할인 조건에는 순번 조건과 기간 조건의 두 가지 종류가 존재한다는 것을 기억해야한다.<br><br>
 
 ## 데이터 중심 설계의 문제점
-- 캡슐화를 위반한 설꼐는 구성하는 요소들이 높은 응집도와 낮은 결합도를 가질 확률은 극히 낮다.<bR>
+- 캡슐화를 위반한 설꼐는 구성하는 요소들이 높은 응집도와 낮은 결합도를 가질 확률은 극히 낮다.<bR> 🪦
 따라서 캡슐화를 위반한 설계는 변경에 취약할 수 밖에 없다.<br><br>
 - 데이터 중심의 설계가 변경에 취약한 이유는 두 가지다.<br>
   - 데이터 중심의 설계는 본질적으로 너무 이른 시기에 데이터에 관해 결정하도록 강요한다.<br><br>
