발표자료 업로드

--- a/03/이영훈/3장.md
+++ b/03/이영훈/3장.md
@@ -1,6 +1,6 @@
 # 역할, 책임, 협력
 
-> 책임과 열할을 중심으로 협력을 바라보는 것이  
+> 책임과 역할을 중심으로 협력을 바라보는 것이  
 > 바로 변경과 확장이 용이한 유연한 설계로 나아가는 첫걸음이다.  
 
 * 객체지향 패러다임 관점에서 핵심은 **역할(role)**, **책임(responsibility)**, **협력(collaboration)**  
