12장 발표자료

--- a/12/이영훈/12장.md
+++ b/12/이영훈/12장.md
@@ -39,7 +39,7 @@
 본 장에서는 상속과 관련된 개념을 설명하기 위해 코드 재사용을 활용한 것일 뿐, **실제 코드를 작성할 때는 코드 재사용을 목적으로 상속을 사용해서는 안 된다**
 
 ### 데이터 관점의 상속
-데이터 관점에서 상속은 자식 클래스의 인스턴스 안에 부모 클래스의 인스턴스를 포함하는 것
+데이터 관점에서 상속은 자식 클래스의 인스턴스 안에 부모 클래스의 인스턴스 변수를 포함하는 것
 
 ### 행동 관점의 상속
 부모 클래스가 정의한 일부 메서드를 자식 클래스의 메서드로 포함시키는 것  
