--- a/12/노상문/12장.md
+++ b/12/노상문/12장.md
@@ -180,3 +180,98 @@ GradeLacture GradeLecture = (GradeLecture)lecture;
   
 - 실행될 메서드를 런타임에 결정하는 방식을 동적 바인딩 또는 지연 바인딩이라고 한다.<br>
 
+
+## 동적 메서드 탐색과 다형성
+- 메시지를 수신한 객체는 먼저 자신을 생성한 클래스에 적합한 메서드가 존재하는지 검사한다.<br>
+존재하면 메서드를 실행하고 탐색을 종료한다.
+  
+- 메서드를 찾지 못했다면 부모 클래스에서 메서드 탐색을 계속한다.<Br>
+이 과정은 적합한 메서드를 찾을 때까지 상속 계층을 따라 올라가며 계속된다. <br>
+  
+- 상속 계층의 가장 최상위 클래스에 이르렀지만 메서드를 발견하지 못한 경우 예외를 발생시키며 탐색을 중단한다.<br>
+
+- self 참조 (self reference) :
+  메시지 탐색과 관련된 이해해야 하는 중요한 변수.<br>
+  객체가 메시지를 수신하면 컴파일러는 self 참조라는 임시 변수를 자동으로 생성한 후 메시지를 수신한 객체를 가리키도록 설정한다.<Br>
+  동적 메서드 탐색은 self가 가리키는 객체의 클래스에서 시작해서 상속 계층의 역방향으로 이뤄지며 메서드 탐색이 종료되는 순간 self 참조는 자동으로 소멸된다.<br>
+  시스템은 앞에서 설명한 class 포인터와 parent 포인터와 함께 self참조를 조합해서 메서드를 탐색한다.<Br>
+  
+
+- self와 this
+  - 정적 타입 언어에 속하는 c++, 자바. C#에서는 self 참조를 this 라고 부른다.<br>
+  동적 타입 언어에서 속하는 스몰토크, 루비에선 self참조를 나타내는 키워드로 self르를 사용한다.<br>
+    파이썬 에서는 self 참조의 이름을 임의로 정할 수 있지만 대부분의 개발자들은 전통을 조놎앻서 self라는 이름을 사용한다.
+    
+- 시스템은 상속 계층을 따라 최상위 클래스인 Object 클래스에 이를 때까지 메서드를 탐색한다.<Br>
+최상위 클래스에 이르러서도 적절한 메서드를 찾지 못한 경우에는 에러를 발생시키고 메서드 탐색을 종료한다.
+  ![img_6.png](img_6.png)
+  
+- 자동적인 메시지 위임 : <br>
+자식 클래스는 자신이 이해할 수 없는 메시지를 전송받은 경우 상속 계층을 따라 부모 클래스에게 처리를 위임한다.<br>
+클래스 사이의 위임은 프로그래머의 개입 없이 상속 계층을 따라 자동으로 이뤄진다.<br><br>
+  
+- 메서드를 탐색하기 위해 동적인 문맥을 사용한다는 것 :<br>
+메시지를 수신했을 때 실제로 어떤 메서드를 실행할지를 결정하는 것은 컴파일 시점이 아닌 실행 시점에 이뤄지며,<bR>
+  메서드를 탐색하는 경로는 self 참조를 이용해서 결정한다.<br><br>
+  
+- 메시지가 처리되는 문맥을 이해하기 위해선 정적인 코드를 분석하는 것만으로는 충분하지 않다.<br>
+런타임에 실제로 메시지를 수신한 객체가 어떤 타입인지를 추적해야 한다.<br>
+  이 객체의 타입에 따라 메서드를 탐색하는 문맥이 동적으로 결정되며, 여기서 가장 중요한 역할을 하는 것이 바로 self 참조다.<br>
+  
+### 자동적인 메시지 위임
+ - 동적 메서드 탐색의 입장에서 상속 계층은 메시지를 수신한 객체가 자신이 이해할 수 없는 메시지를 부모 클래스에게 전달하기 위한 물리적인 경로를 정의하는 것으로 볼 수 있다.<bR>
+상속 계층 안의 클래스는 메시지를 처리할 방법을 알지 못할 경우 메시지에 대한 처리를 부모 클래스에게 위임한다.<br>
+   메시지 처리를 위임받은 부모 클래스 역시 수시한 메시지를 이해할 수 없다면 자신의 부모 클래스에게 메시지를 전달한다.<br><br>
+   여기서 핵심은 적절한 메서드를 찾을 때까지 상속 계층을 따라 부모 클래스로 처리가 위임된다는 것이다.<br><br>
+   
+- 메서드 오버라이딩은 자식 클래스의 메서드가 동일한 시그니처를 가진 부모 클래스의 메서드보다 먼저 탐색되기 때문에 벌어지는 현상이다.
+- 메서드 오버로딩은 동일한 시그니처를 가지는 자식 클래스의 메서드는 부모 클래스의 메서드를 감추지만 이름만 같고 시그니처가 완전히 동일하지 않은 메서드들은 상속 계층에 걸쳐 사이좋게 공존하는 것이다.
+
+- 이름 숨기기 C ++는 상속 계층안 에서 동일한 이름을 가진 메서드가 공존해서 발생하는 혼란을 방지하기 위해 부모 클래스에 선언된 이름이 동일한 메서드 전체를 숨겨서 클라이언트가 호출하지 못하도록 막는다.
+
+### 동적인 문맥
+- 메시지를 수신한 객체가 무엇이냐에 따라 메서드 탐색을 위한 문맥이 동적으로 바뀐다는 것이다.<br>
+그리고 이 동적은 문맥을 결정하는 것은 바로 메시지를 수신한 객체를 가리키는 self 참조다ㅣ.<br>
+  
+- 동일한 코드라도 self 참조가 가리키는 객체가 무엇인지에 따라 메서드 탐색을 위한 상속 계층의 범위가 동적으로 변한다.<br>
+따라서 self 참조가 가리키는 객체의 타입을 변경함으로써 객체가 실행될 문맥을 동적으로 바꿀 수 있다.
+  
+- self 참조가 동적 문맥을 결정한다는 사실은 종종 어떤 메서드가 실행될지를 예상하기 어렵게 만든다.<br>
+대표적인 경우가 자신에게 다시 메세지를 전송하는 self 전송(self send)이다.
+  
+- 현재 클래스의 메서드를 호출 하는 것이 아니라 현재 객체에게 메시지를 전송하는 것이다.
+
+- 현재 객체란? <br>
+  바로 self참조가 가리키는 객체다.<br>
+  self 참조가 가리키는 자기 자신에게 메시지를 전송하는 것을 self 전송이라고 부른다.<br>
+  self 전송을 이해하기 위해서는 self 참조가 가리키는 바로 그 객체에서부터 메시지 탐색을 다시 시작한다는 사실을 기억해야 한다.<Br><br>
+  
+### 이해할 수 없는 메시지
+ - 상속 계층의 정상에 오고 나서 자신이 메시지 처리를 할 수 없다는 사실을 알게 되면 어떻게 해야할까?<br>
+이는 프로그래밍 언어가 정적 타입 언어에 속하는지 동적 타입 언어에 속하는지에 따라 달라진다.<br>
+   
+#### 정적 타입 언어와 이해할 수 없는 메시지
+- 정적 타입 언어에서는 코드를 컴파일할 때 상속 계층 안의 클래스들이 메시지를 이해할 수 있는지 여부를 판단한다.<br>
+따라서 상속 계층 전체를 탐색한 후에도 메시지를 처리할 수 있는 메서드를 발견하지 못했따면 컴파일 에러이다.
+  
+#### 동적 타입 언어와 이해할 수 없는 메시지
+- 동적 타입 언어 역시 메시지를 수신한 객체의 클래스로부터 부모 클래스의 방향으로 메서드를 탐색한다.<Br>
+차이점이라면 동적 타입 언어에는 컴파일 단계가 존재하지 않기 때문에 실제로 코드를 실행해보기 전에는 메시지 처리 기능 여부를 판단할 수 없다는 점이다.<br><br>
+  
+- 몇 가지 동적 타입 언어는 최상위 클래스까지 메서드를 탐색한 후에 메서드를 처리할 수 없다는 사실을 발견하면 self 참조가 가리키는 현재 객체에게 메세지를 이해할 수 없다는 메시지를 전송한다.
+
+- 이 메시지들 역시 보통의 메시지처럼 self 참조가 가리키는 객체의 클래스에서부터 시작해서 상속 계층을 거슬러 올라가며 메서드를 탐색한다.<Br>
+만약 상속 계층 안의 어떤 클래스도 메시지를 처리할 수 없다면 메서드 탐색은 다시 한번 최상위 클래스에 이르게 되고 최종적으로 예외가 던져 진다.<br><br>
+- 이해할 수 없는 메시지를 처리할수 있는 동적 타입 언어는 좀 더 순수한 관점에서 객체지향 패러다임을 구현한다고 볼 수 있다.<br>
+협력을 위해 메시지를 전송하는 객체는 메시지를 수신한 객체의 내부 구현에 대해서는 알지 못한다.<br>
+  단지 객체가 메시지를 처리할 수 있따고 믿고 메시지를 전송할 뿐이다.<br>
+  객체가 해당하는 메서드를 구현하고 있건, method_missing 메서드를 재정의하건 상관 없이 클라이언트는 단지 전송한 메시지가 성공적으러 처리됐다는 사실만 알 수 있을 뿐이다.
+  
+- 동적 타입 언어는 이해할 수 없는 메시지를 처리할 수 잇는 능력을 가짐으로써 메시지가 선언된 인터페이스와 메서드가 정의된 구현을 분리할 수 있다.<br>
+메시지 전송자는 자신이 원하는 메시지를 전송하고 메시지 수신자는 스스로의 판단에 따라 메시지를 처리한다.<br>
+  이것은 메시지를 기반으로 협력하는 자율적인 객체라는 순수한 객체지향의 이상에 좀 더 가까운 것이다.<br>
+  그러나 동적 타입 언어의 이러한 동적인 특성과 유연성은 코드를 이해하고 수정하기 어렵게 만들뿐만 아니라 디버깅 과정을 복잡하게 만들기도 한다.
+  
+- 특히 동적 타입 언어의 이러한 특징으로 인해 동적 타입 언어는 정적 타입 언어보다 더 쉽고 강력한 도메인-특화 (Domain- Specific Language, DSL)를 개발할 수 있는 것으로 간주된다.<br>
+마틴 파울러는 동적 타입 언어의 이러한 특징을 이용해 도메인-특화 언어를 개발하는 방식을 동적 리셉션(dynamic reception) 이라고 부른다.
+
